# jobseekers-for-linkedin

./: .dockerignore  .env.docker  .env.example  .gitignore  API_QUICK_REFERENCE.md  CHANGELOG_FILE_UPLOAD.md  DOCKER_TESTING.md  Dockerfile  Job_Email_Generator.postman_collection.json  Makefile  POSTMAN_GUIDE.md  README.md  alembic.ini  docker-compose.yml  prompt.txt  pyproject.toml  render.yaml  requirements.txt  sample_resume.txt  start.sh  test-docker.sh  test_api.py
alembic/: env.py
alembic/versions/: 001_initial_migration.py  18fd6d0c75f4_expand_hr_contact_schema.py  a6bf302e9f4d_add_user_id_to_hr_contacts.py  b607e09cf3b3_refactor_user_to_use_username.py
src/: __init__.py  config.py  main.py
src/lib/: __init__.py  openai_client.py  postgres.py
src/models/: __init__.py  base.py  hr.py  resume.py  schemas.py  user.py
src/prompts/: __init__.py  email_prompt.py
src/services/: __init__.py  email_service.py  hr_service.py  openai_service.py  user_service.py  vector_service.py
src/utils/: file_parser.py  helpers.py  validators.py
